# flake8-profiles

./: .flake8  .gitignore  LICENSE  Pipfile  flake8_profiles.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_flake8_profiles.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: push_request.yaml
config/: default.conf
doc/: conf.py  index.rst
src/flake8_profiles/: __init__.py
tests/: test_flake8_profiles.py
